[package]
name = "distrail-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "distrailrs"
path = "src/lib/mod.rs"

[dependencies]
byteorder = "1.5"
memmap2 = { version = "0.9" }
prost = "0.12"
tokio = { version = "1.38", features = ["full"] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11"